# clippy

./: .gitignore  README.md  pyproject.toml
src/clippy/: __main__.py  _step_handler.py  callback.py  clippy_base.py  clippy_helper.py  constants.py  data_states.py  instructor.py  logger.py  main.py  run.py  run_sp.py  setup.py
src/clippy/capture/: __init__.py  base.py  capture.py  capture_async.py  capture_sync.py  machine_capture.py
src/clippy/controllers/: __init__.py  constrainer.py  controller.py  controller_config.py  models.py  utils.py
src/clippy/controllers/apis/: cohere_controller.py  cohere_controller_utils.py  openai_controller.py
src/clippy/crawler/: __init__.py  crawler.py  crawler_sync.py  executor.py  helpers.py  screenshot_matcher.py  selectors.py  tools_capture.py
src/clippy/crawler/capture/: __init__.py  base.py  capture_async.py  capture_sync.py
src/clippy/crawler/inject/: empty.js  preload.js  ws_transmit.js
src/clippy/crawler/parser/: dom_parser_text.py  dom_snapshot.py  playwright_strings.py
src/clippy/crawler/plugins/: page_parser.py  tracing.py
src/clippy/crawler/states/: actions.py  states.py
src/clippy/dm/: __init__.py  data_manager.py  data_manager_utils.py  db_utils.py  models.py  sql_models.py  task_bank.py
src/clippy/states/: __init__.py  actions.py  base.py  states.py
src/clippy/stubs/: __init__.py  stubs.py  tasks_stubs.py
src/clippy/stubs/templates/: examples_prompt.jinja  prompt.jinja  state.jinja
src/clippy/templates/: available_actions.jinja  default_available_actions.jinja  examples_prompt.jinja  header_filter_elements.jinja  header_next_action.jinja  header_prompt.jinja  message.jinja  prompt.jinja  state.jinja  transform_generation.jinja
src/clippy/templates/task_gen/: task_gen.jinja  task_gen_json.jinja
src/clippy/utils/: __init__.py  _input.py  async_tools.py  data_funcs.py  input_utils.py  scoring.py  start_utils.py
src/clippymm/: model.py
src/common/: math_utils.py
src/taskgen/: __init__.py
src/taskgen/llm/: task_bank
src/taskgen/wordbank/: city_bank  company_bank  currency_bank  number_bank  recipe_bank  restaurant_bank  task_base  timeslot_bank
src/trajlab/: rxconfig.py  setup.py
src/trajlab/trajlab/: approval_status.py  constants.py  db_interface.py  launcher.py  models.py  state.py  trajlab.py  trajlab_constants.py  trajlab_state.py
tests/: test_math.py  utils.py
tests/test_clippy/: test_clippy.py  test_controller.py  test_crawler.py  test_data_manager.py  test_database.py  test_datastates.py  test_instructor.py  test_mocked_response.py  test_parser.py  test_regressions.py  test_states.py  test_stubs.py  test_task_generation.py
tests/test_data/: test_database.py
tests/test_mm/: test_models.py
tests/test_trajlab/: test_trajlab.py
(+13 files in other folders)
