[project]
name = "clippy"
version = "0.1.0"
description = ""
authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
dependencies = [
    "reflex==0.3.9",
    "openai[datalib,embeddings,wandb]>=0.27.8",
    "cohere>=4.20.2",
    "pytest-playwright>=0.4.2",
    "Jinja2>=3.1.2",
    "torch>=2.0.1",
    "tinydb>=4.8.0",
    "sqlalchemy-utils>=0.41.1",
    "bs4>=0.0.1",
    "playwright>=1.37.0",
    "numpy>=1.25.2",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.2",
    "opencv-python>=4.8.0.76",
    "transformers>=4.32.0",
    "sentencepiece>=0.1.99",
    "loguru>=0.7.1",
    "huggingface-hub>=0.20.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
server = { shell = "cd src/trajlab && reflex run" }
reinitserver = { shell = "cd src/trajlab && reflex init" }

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.1"]
dev = ["-e file:///${PROJECT_ROOT}/src/trajlab#egg=trajlab"]

[tool.pdm.resolution]
excludes = ["uvicorn"]

[tool.pytest.ini_options]
# ignore warnings not from clippy
filterwarnings = ["ignore", "default:::clippy"]
pythonpaths = ["src", "tests"]
# testpaths = ["tests/"]
